# gridded-etl-tools

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  constraints-local.txt  generate_zarr.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  sources.py
.github/setup/: action.yaml
.github/workflows/: claude-code-review.yml  lint.yml  merge-protection.yml  python-app.yml  tests.yml  trigger-managers-test.yml  trigger-prefect-etl-orchestration-build.yml  update-constraints.yml
docs/: Aligning_update_chunks.md  IPFS_Node_Management.md  Out_of_scope.md  Python_virtual_environments.md  development_roadmap.md  etl_developers_manual.md  logging.md  manual_rechunking.md  metadata_standard.md  registering_dataset_sources.md  running_an_etl.md  understanding_this_repository.md
etls/: README.md  dataset_manager.py
etls/managers/: chirps.py
etls/utils/: attributes.py  convenience.py  ipfs.py  logging.py  metadata.py  zarr_methods.py
examples/managers/: chirps.py  my_new_etl.py
gridded_etl_tools/: __init__.py  dataset_manager.py  encryption.py
gridded_etl_tools/util_funcs/: conventions.py  data_intake.py  flat_to_nd.py  projections.py  reindexing.py
gridded_etl_tools/utils/: attributes.py  convenience.py  encryption.py  errors.py  extractor.py  ipfs.py  logging.py  metadata.py  publish.py  store.py  time.py  transform.py  zarr_methods.py
ops/: env.sh
tests/: README.md  common.py  conftest.py  pytest.ini  test_encryption.py  test_log.py  test_zarr_methods.py
tests/chirps/: conftest.py  test_chirps.py  test_chirps_encryption.py
tests/metadata/: My Organization Data Catalog - test.json
tests/metadata/collections/: CHIRPS.json
tests/metadata/datasets/: chirps_final_25-daily_test_initial.json
tests/system/: conftest.py  test_chirps.py  test_chirps_encryption.py  test_post_parse_qc.py
tests/system/data/: CHIRPS25_2024-12_Nevada.nc  CHIRPS25_2024-12_Nevada_subset.nc  CHIRPS25_2025-01_Nevada.nc  CHIRPS25_2025-01_Nevada_with_hole.nc  chirps_append_subset0.nc  chirps_append_subset1.nc  chirps_append_subset_0.nc  chirps_append_subset_1.nc  chirps_append_subset_with_hole.nc  chirps_initial_dataset.nc  chirps_initial_dataset_smaller.nc
tests/system/data/chirps_initial_input_test/: CHIRPS25_2024-12_Nevada000001.nc4  CHIRPS25_2024-12_Nevada000002.nc4  CHIRPS25_2024-12_Nevada000003.nc4  CHIRPS25_2024-12_Nevada000004.nc4  CHIRPS25_2024-12_Nevada000005.nc4  CHIRPS25_2024-12_Nevada000006.nc4  CHIRPS25_2024-12_Nevada000007.nc4  CHIRPS25_2024-12_Nevada000008.nc4  CHIRPS25_2024-12_Nevada000009.nc4  CHIRPS25_2024-12_Nevada000010.nc4  CHIRPS25_2024-12_Nevada000011.nc4  CHIRPS25_2024-12_Nevada000012.nc4  CHIRPS25_2024-12_Nevada000013.nc4  CHIRPS25_2024-12_Nevada000014.nc4  CHIRPS25_2024-12_Nevada000015.nc4  CHIRPS25_2024-12_Nevada000016.nc4  CHIRPS25_2024-12_Nevada000017.nc4  CHIRPS25_2024-12_Nevada000018.nc4  CHIRPS25_2024-12_Nevada000019.nc4  CHIRPS25_2024-12_Nevada000020.nc4  CHIRPS25_2024-12_Nevada000021.nc4  CHIRPS25_2024-12_Nevada000022.nc4  CHIRPS25_2024-12_Nevada000023.nc4  CHIRPS25_2024-12_Nevada000024.nc4  CHIRPS25_2024-12_Nevada000025.nc4  CHIRPS25_2024-12_Nevada000026.nc4  CHIRPS25_2024-12_Nevada000027.nc4  CHIRPS25_2024-12_Nevada000028.nc4  CHIRPS25_2024-12_Nevada000029.nc4  CHIRPS25_2024-12_Nevada000030.nc4  CHIRPS25_2024-12_Nevada000031.nc4
tests/unit/: conftest.py  test_attrs_write.py  test_dataset_manager.py  test_log.py  test_quality_checks.py  test_zarr_methods.py
tests/unit/inputs/: chirps_example_zarr.json  rtma_pcp.grib
tests/unit/inputs/timeseries_data.zarr/: .zattrs  .zmetadata
tests/unit/inputs/timeseries_data.zarr/temperature/: .zarray  .zattrs  0  1  2  3
tests/unit/inputs/timeseries_data.zarr/time/: .zarray  .zattrs  0
tests/unit/util_funcs/: test_conventions.py  test_data_intake.py  test_flat_to_nd.py  test_projections.py  test_reindexing.py
tests/unit/utils/: test_append_rechunking.py  test_attributes.py  test_convenience.py  test_encryption.py  test_extractor.py  test_insert_slice_completion.py  test_ipfs.py  test_logging.py  test_metadata.py  test_publish.py  test_publish.py.py  test_store.py  test_time.py  test_transform.py  test_update_rechunking.py  test_zarr_methods.py
tests/utils/: test_encryption.py  test_metadata.py
zarr_etl_tools/: dataset_manager.py
zarr_etl_tools/utils/: attributes.py  convenience.py  ipfs.py  logging.py  metadata.py  store.py  zarr_methods.py
