# pyproject.toml
[build-system]
requires = [
    "setuptools>=61.2",
    "wheel",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "gridded_etl_tools"
dynamic = ["version"]
authors = [
    { name = "Robert Banick", email = "robert.banick@arbol.io" },
    { name = "Evan Schechter", email = "evan@arbol.io" },
    { name = "Frank DeMarco", email = "if.self.end@gmail.com" },
    { name = "Chris Rossi", email = "chris@christophermrossi.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
description = "Tools for transforming gridded climate data into Zarrs"
readme = "README.md"
keywords = ["Climate", "Zarr", "ETL"]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "cfgrib",
    "dag-cbor==0.2.2",
    "dask[array,diagnostics,distributed]>=2025.5.1",
    "deprecation",
    "fsspec",
    "kerchunk",
    "metpy",
    "multiformats",
    "natsort",
    "nest-asyncio",
    "netcdf4",
    "numpy",
    "p_tqdm",
    "pandas",
    "psutil",
    "pycryptodome",
    "python-dateutil",
    "requests",
    "s3fs>=2025.5.1",
    "shapely",
    "statsmodels",
    "tqdm",
    "xarray[complete]==2025.9.0",
    "zarr>3.0.0",
]

[project.urls]
Homepage = "https://arbol.io/"

[project.optional-dependencies]
testing = [
    "pyproj",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "responses",
    "moto[server]"
]
dev = [
    "black",
    "flake8",
    "flake8-pyproject",
    "nox",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "gridded_etl_tools/_version.py"

[tool.black]
line-length = 119

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = ["py.typed", "*.json"]

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[tool.flake8]
# flake8 and black disagree on E203, E701, and W503
ignore = ["E203", "E701", "W503"]
exclude = ["temp/*", "build/*", ".nox", ".venv"]
max-line-length = 120
