# pyproject.toml
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gridded_etl_tools"
dynamic = ["version"]
authors = [
    { name = "Robert Banick", email = "robert.banick@arbol.io" },
    { name = "Evan Schechter", email = "evan@arbol.io" },
    { name = "Frank DeMarco", email = "if.self.end@gmail.com" },
    { name = "Chris Rossi", email = "chris@christophermrossi.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
description = "Tools for transforming gridded climate data into Zarrs"
readme = "README.md"
keywords = ["Climate", "Zarr", "ETL"]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "cfgrib",
    "dag-cbor==0.2.2",
    "dask[array,diagnostics,distributed]>=2025.5.1",
    "deprecation",
    "fsspec",
    "kerchunk",
    "metpy",
    "multiformats",
    "natsort",
    "nest-asyncio",
    "netcdf4",
    "numpy<2.4", # missing data vars when above 2.4, investigate
    "p_tqdm",
    "pandas",
    "psutil",
    "pycryptodome",
    "pyproj",
    "python-dateutil",
    "requests",
    "s3fs>=2025.5.1",
    "shapely",
    "statsmodels",
    "tqdm",
    "xarray[complete]",
    "zarr>3.0.0",
]

[project.urls]
Homepage = "https://arbol.io/"

[dependency-groups]
dev = [
    "black",
    "flake8",
    "flake8-pyproject",
    "h5py",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "responses",
    "moto[server]",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["gridded_etl_tools"]

[tool.black]
line-length = 119

[tool.flake8]
# flake8 and black disagree on E203, E701, and W503
ignore = ["E203", "E701", "W503"]
exclude = ["temp/*", "build/*", ".venv"]
max-line-length = 120

[tool.uv]
exclude-newer = "3 days"
