# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#setup-cfg

[metadata]
name = zarr_etl_tools
author = Robert Banick
description = Tools for transforming gridded climate data into Zarrs
long_description = A set of utilities for building ETLs of climate data that place the results in Zarr data stores
keywords = Climate, Zarr, ETL, IPFS

[options]
packages = find:
python_requires = >=3.10
install_requires =
    dag-cbor==0.2.2
    dask[array,diagnostics,distributed]==2023.1.1
    fsspec
    ipldstore @ git+https://github.com/dClimate/ipldstore@v2.1.0
    kerchunk @ git+https://github.com/dClimate/kerchunk
    multiformats
    natsort
    numpy
    p_tqdm
    pandas
    requests
    s3fs
    shapely
    tqdm
    xarray[complete]
    zarr==2.13.6

[options.extras_require]
testing = 
    pytest
    pytest-mock
dev = 
    flake8
    black

[flake8]
ignore = E123, E251, E266, W503
max-line-length = 200

[options.package_data]
* = py.typed, *.json

[options.packages.find]
exclude = tests
