# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#setup-cfg

[metadata]
name = gridded_etl_tools
author = Robert Banick
description = Tools for transforming gridded climate data into Zarrs
long_description = A set of utilities for building ETLs of climate data that place the results in Zarr data stores
keywords = Climate, Zarr, ETL, IPFS

[options]
packages = find:
python_requires = >=3.10
install_requires =
    cfgrib
    dag-cbor==0.2.2
    dask[array,diagnostics,distributed]==2023.3.2
    fsspec
    ipldstore @ git+https://github.com/dClimate/ipldstore@v2.1.1
    kerchunk
    multiformats
    natsort
    numpy
    p_tqdm
    pandas
    psutil
    pycryptodome
    requests
    s3fs
    shapely
    tqdm
    xarray[complete]>=2023.9.0
    zarr>=2.16.1

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
dev =
    flake8
    black

[flake8]
# flake8 and black disagree on E203
ignore = E203 W503
max-line-length = 119


[options.package_data]
* = py.typed, *.json

[options.packages.find]
exclude = tests
